--- a/index.html
+++ b/index.html
@@ -23,10 +23,6 @@
             <br>
             <div class="text">
                 I am an aspiring software developer with knowledge on the client side, whit Angular, as on the Server side, whit Javascript, NodeJS, ExpressJS. I am interested in continuing to grow in knowledge of new trend technologies in today's industry.    
-                <br><br>
-                <a href="https://drive.google.com/file/d/1F9JUs5CBGGZiTMr8ImEybqDghjdd_jwq/view?usp=sharing" target="_blank"> 
-                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i>Go to CV
-                </a>        
             </div>
         </div>
     </div>
@@ -56,11 +52,15 @@
             </div>
             <div>
                 <i class="fas fa-mail-bulk fa-5x"></i>
-                <h3>Email|Nets</h3>
+                <h3>Emails</h3>
                 <div>
                     <a class="list" href="mailto:estebanezequielceballos@gmail.com" target="_blank">
-                        estebanezequielceballos@gmail.com</a>
-                    <a class="list" href="https://www.instagram.com/e2equle1/" target="_blank">Instagram</a>
+                    Go to Gmail
+                    </a>
+                    <!-- <a class="list" href="https://www.instagram.com/e2equle1/" target="_blank">
+                    Instagram</a><span>, </span>
+                    <a href="https://www.facebook.com/e2equle1" target="_blank">
+                    Facebook</a> -->
                 </div>
             </div>
         </div>
@@ -91,12 +91,13 @@
         </div>
     </div>
 
-    <!-- contact -->
+    <!-- contactos -->
     <div class="container text-center">
         <div class="grid-2">
             <div>       
                 <h3 class="title">CONTACT ME</h3>
-                <p class="center">
+                <br>
+                <p class="justify">
                         I am currently part of the CLIP program for the training of FullStack developers in Córdoba, however you can contact me for any offer related to this profession. Thank you very much for visiting my portfolio.
                 </p>
             </div>
@@ -104,7 +105,16 @@
             <i class="fas fa-handshake fa-10x"></i>
             </div>
         </div>
-        <br>
+        <br><br>
+        <!-- descargar cv -->
+        <div class="text text-center">
+            <h4 style="text-transform: uppercase;">download CV</h4> 
+            <a href="https://drive.google.com/file/d/1F9JUs5CBGGZiTMr8ImEybqDghjdd_jwq/view?usp=sharing" target="_blank"> 
+                <h2>
+                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i>here
+                </h2>
+            </a>
+        </div>
     </div>   
 
      <!-- Footer -->
