--- a/index.html
+++ b/index.html
@@ -106,13 +106,12 @@
             </div>
         </div>
         <br><br>
+
         <!-- descargar cv -->
         <div class="text text-center">
-            <h4 style="text-transform: uppercase;">download CV</h4> 
-            <a href="https://drive.google.com/file/d/1U4sgogMfaEwykwqZ5nKLVobTL1ljGA-g/view?usp=sharing" target="_blank"> 
-                <h4>
-                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i>here
-                </h4>
+            <a href="https://drive.google.com/file/d/1U4sgogMfaEwykwqZ5nKLVobTL1ljGA-g/view?usp=sharing" target="_blank" style="text-decoration: none;"> 
+                <h4 style="text-transform: uppercase;">download CV</h4> 
+                <i class="fas fa-hand-point-down fa-4x" style="vertical-align: middle; color: whitesmoke;"></i>
             </a>
         </div>
     </div>   
