--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <!-- google font -->
+    <!-- fuentes google -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Allerta&display=swap" rel="stylesheet">
     <!-- ANIMATE.CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
     <!-- font awesome -->
@@ -78,14 +79,14 @@
                 </div>
                 <div>
                     <p class="pre">
-                    <i class="fas fa-check"></i> Front-End HTML, CSS, Javascript <br>
-                    <i class="fas fa-check"></i> Framework Angular, Bootstrap <br>
-                    <i class="fas fa-check"></i> Back-End NodeJS, ExpressJS <br>
-                    <i class="fas fa-check"></i> POO Java <br>
-                    <i class="fas fa-check"></i> Database MongoDB, MySQL <br>
-                    <i class="fas fa-check"></i> REST APIs consumption <br>
-                    <i class="fas fa-check"></i> Versioning system Git <br>
-                    <i class="fas fa-check"></i> Basic English Language</p>
+                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i> Front-End: HTML | CSS | Javascript <br>
+                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i> Framework: Angular | Bootstrap <br>
+                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i> Back-End: NodeJS | ExpressJS <br>
+                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i> POO: Java <br>
+                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i> Database: MongoDB | MySQL <br>
+                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i> REST APIs consumption <br>
+                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i> Versioning system Git <br>
+                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i> Basic English Language</p>
                 </div>
             </div>
         </div>
@@ -109,8 +110,8 @@
 
         <!-- descargar cv -->
         <div class="text text-center">
-            <a href="https://drive.google.com/file/d/1U4sgogMfaEwykwqZ5nKLVobTL1ljGA-g/view?usp=sharing" target="_blank" style="text-decoration: none;"> 
-                <h4 style="text-transform: uppercase;">download CV</h4> 
+            <a href="https://drive.google.com/file/d/1kAZhXsfv8DxjWhCzDy34YTTEBy3CvNMD/view?usp=sharing" target="_blank" style="text-decoration: none;"> 
+                <h3 style="text-transform: uppercase;">download CV</h3> 
                 <i class="fas fa-hand-point-down fa-4x" style="vertical-align: middle; color: whitesmoke;"></i>
             </a>
         </div>
