--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Allerta&display=swap" rel="stylesheet">
-    <!-- ANIMATE.CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
     <!-- font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <title>Portfolio</title>
@@ -17,7 +15,7 @@
 <body>
     <!-- encabezado -->
     <div class="header">
-        <div class="header-content animated flash">
+        <div class="header-content">
             <div class="title">
             Esteban Ezequiel Ceballos
             </div>
@@ -79,14 +77,17 @@
                 </div>
                 <div>
                     <p class="pre">
-                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i> Front-End: HTML | CSS | Javascript <br>
-                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i> Framework: Angular | Bootstrap <br>
-                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i> Back-End: NodeJS | ExpressJS <br>
-                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i> POO: Java <br>
-                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i> Database: MongoDB | MySQL <br>
-                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i> REST APIs consumption <br>
-                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i> Versioning system Git <br>
-                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i> Basic English Language</p>
+                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i>Front-End: HTML | CSS | Javascript <br>
+                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i>Framework: Angular <br>
+                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i>Styles: Bootstrap <br>
+                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i>Back-End: NodeJS | ExpressJS <br>
+                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i>POO | MVC 
+                    <br>
+                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i>Database: MongoDB | MySQL <br>
+                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i>REST APIs consumption <br>
+                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i>Platform as a service: Firebase <br>
+                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i>Versioning system Git <br>
+                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i>Basic English </p>
                 </div>
             </div>
         </div>
