--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <br>
             <div class="text">
-                I am an aspiring software developer with knowledge on the client side, whit Angular, as on the Server side, whit Javascript, NodeJS, ExpressJS. I am interested in continuing to grow in knowledge of new trend technologies in today's industry.    
+                I am an aspiring software developer with knowledge on the client side, with Angular, as on the server side, with Javascript, NodeJS, ExpressJS. I am interested in continuing to grow in the knowledge of new trend technologies in the current industry.   
             </div>
         </div>
     </div>
@@ -70,10 +70,13 @@
     <div class="bg-light diagonal">
         <div class="container recto">
             <h3 class="title text-center">MY skills</h3>
-            <br><br>
-            <div class="grid-2 text-center">
-                <div class="center">
-                    <i class="fas fa-laptop-code fa-10x"></i>
+            <br>
+            <div class="grid-2">
+                <div class="flexible">
+                    <i class="fas fa-laptop-code fa-8x" style="text-align: center; padding: 20px;"></i>
+                    <i class="fas fa-code fa-5x"></i>
+                    <i class="fas fa-server fa-7x" style="text-align: center; padding-left: 150px;"></i>
+                    <i class="fas fa-database fa-8x" style="padding-left: 35px;"></i>
                 </div>
                 <div>
                     <p class="pre">
@@ -87,7 +90,7 @@
                     <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i>REST APIs consumption <br>
                     <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i>Platform as a service: Firebase <br>
                     <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i>Versioning system Git <br>
-                    <i class="fas fa-hand-point-right fa-2x" style="vertical-align: middle;"></i>Basic English </p>
+                    </p>
                 </div>
             </div>
         </div>
@@ -105,15 +108,14 @@
             </div>
             <div class="center">
             <i class="fas fa-handshake fa-10x"></i>
-            </div>
+            </div>        
         </div>
-        <br><br>
-
         <!-- descargar cv -->
         <div class="text text-center">
+            <br><br><br>
             <a href="https://drive.google.com/file/d/1kAZhXsfv8DxjWhCzDy34YTTEBy3CvNMD/view?usp=sharing" target="_blank" style="text-decoration: none;"> 
-                <h3 style="text-transform: uppercase;">download CV</h3> 
                 <i class="fas fa-hand-point-down fa-4x" style="vertical-align: middle; color: whitesmoke;"></i>
+                <h3 style="text-transform: uppercase;">download cv here</h3> 
             </a>
         </div>
     </div>   
