--- a/index.html
+++ b/index.html
@@ -17,13 +17,19 @@
 <body>
     <!-- encabezado -->
     <div class="header">
+        <nav>
+            <div class="nav-bar">
+                <a href="#contact">Contact me</a>
+                <a href="#skills">Skills</a>
+            </div>
+        </nav>
         <div class="header-content">
             <div class="title1">
             Esteban Ezequiel Ceballos
             </div>
             <br>
-            <div class="text justify">
-                I am an aspiring software developer with knowledge of Javascript technologies, on the client side (Angular) as well as on the server side (NodeJS, ExpressJS). I am interested in continuing to grow in the knowledge of new trend technologies in the current industry.  
+            <div class="text text-center">
+                I am an aspiring software developer with Javascript, Client Side (Angular) and Server Side (NodeJS, ExpressJS) skills. I am interested in continuing to grow in trending technologies in today's industry. 
             </div>
         </div>
     </div>
@@ -68,13 +74,14 @@
     <!-- skills -->
     <div class="bg-light diagonal">
         <div class="container1 recto">
-            <h3 class="title text-center">
+            <h3 class="title text-center" id="skills">
                 <i class="fas fa-server" style="font-size: inherit;"></i>
                 skills
             </h3>
             <br><br>
             <div class="grid-2">
                 <div>
+                    <br>
                     <p id="pre">
                     <i class="fas fa-cogs fa-1x" style="vertical-align: middle;"></i>
                     HTML | CSS | Javascript <br>
@@ -97,7 +104,7 @@
                     </p>
                 </div>
                 <div class="flexible">
-                    <img src="mean.png" class="img-fluid">
+                    <img src="esquema3.jpg" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -107,23 +114,22 @@
     <div class="container text-center">
         <div class="grid-2">
             <div>       
-                <h3 class="title">CONTACT ME</h3>
+                <h3 class="title" id="contact">CONTACT ME</h3>
                 <br>
                 <p class="text justify">
-                        I am currently part of the CLIP program for the training of FullStack developers in Córdoba, however you can contact me for any offer related to this profession. Thank you very much for visiting my portfolio.
+                    I am currently part of the CLIP program for the training of FullStack developers in Córdoba, however, you can contact me for any offer related to this profession. Thank you very much for visiting my portfolio.
                 </p>
             </div>
             <div class="flexible">
-            <i class="fas fa-handshake fa-10x"></i>
+                <i class="fas fa-handshake fa-10x"></i>
             </div>        
         </div>
         <!-- descargar cv -->
-        <div class="text text-center">
-            <br><br><br>
-            <h3 style="text-transform: uppercase;">download cv here</h3> 
-            <i class="fas fa-hand-point-down fa-4x" style="color: whitesmoke;"></i><br><br>
+        <div class="text">
+            <h3 style="text-transform: uppercase; margin-top: 9rem;">download my cv here</h3> 
+            <!-- <i class="fas fa-hand-point-down fa-3x" style="color: whitesmoke;"></i><br><br> -->
             <a href="https://drive.google.com/file/d/1HoA6sfDwnwTu7eAUJWJdv53LIom2UJZK/view?usp=sharing" target="_blank" style="text-decoration: none;"> 
-                <i class="fas fa-file-alt fa-3x"></i>
+                <i class="fas fa-file-alt fa-4x"></i>
             </a>
         </div>
     </div>   
