--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <div>
                 <i class="fas fa-mail-bulk fa-5x"></i>
-                <h3>Emails</h3>
+                <h3>Email</h3>
                 <div>
                     I receive them in
                     <br>
@@ -74,14 +74,17 @@
     <!-- skills -->
     <div class="bg-light diagonal">
         <div class="container1 recto">
-            <h3 class="title text-center" id="skills">
+            <h3 class="title text-center" id="skills" style="text-shadow: -4px 4px 3.4px rgba(128, 128, 128, 0.4);">
                 <i class="fas fa-server" style="font-size: inherit;"></i>
                 skills
             </h3>
             <br><br>
             <div class="grid-2">
-                <div>
+                <div class="flexible">
+                    <img src="esquema6.png" class="img-fluid">
                     <br>
+                </div>
+                <div class="flexible">
                     <p id="pre">
                     <i class="fas fa-cogs fa-1x" style="vertical-align: middle;"></i>
                     HTML | CSS | Javascript <br>
@@ -100,11 +103,9 @@
                     <i class="fas fa-cogs fa-1x" style="vertical-align: middle;"></i>
                     Firebase (PaaS)<br>
                     <i class="fas fa-cogs fa-1x" style="vertical-align: middle;"></i>
-                    Git <br>
+                    Git
                     </p>
-                </div>
-                <div class="flexible">
-                    <img src="esquema3.jpg" class="img-fluid">
+                    <br>
                 </div>
             </div>
         </div>
@@ -114,23 +115,29 @@
     <div class="container text-center">
         <div class="grid-2">
             <div>       
-                <h3 class="title" id="contact">CONTACT ME</h3>
+                <h3 class="title" id="contact">
+                    <i class="fas fa-handshake fa-1x"></i>
+                    CONTACT
+                </h3>
                 <br>
                 <p class="text justify">
                     I am currently part of the CLIP program for the training of FullStack developers in Córdoba, however, you can contact me for any offer related to this profession. Thank you very much for visiting my portfolio.
                 </p>
+                <br><br>
+                <a href="https://wa.me/351 682 5970">
+                    <i class="fab fa-whatsapp fa-1x" style="vertical-align: auto;"></i>    
+                    351 682 5970
+                </a>
+                <br><br>
             </div>
+            <!-- descargar cv -->
             <div class="flexible">
-                <i class="fas fa-handshake fa-10x"></i>
+                <h3 style="text-transform: uppercase;">download my cv here</h3> 
+                <!-- <i class="fas fa-hand-point-down fa-3x" style="color: whitesmoke;"></i><br><br> -->
+                <a href="https://drive.google.com/file/d/1HoA6sfDwnwTu7eAUJWJdv53LIom2UJZK/view?usp=sharing" target="_blank" style="text-decoration: none;"> 
+                    <i class="fas fa-file-pdf fa-4x"></i>
+                </a>
             </div>        
-        </div>
-        <!-- descargar cv -->
-        <div class="text">
-            <h3 style="text-transform: uppercase; margin-top: 9rem;">download my cv here</h3> 
-            <!-- <i class="fas fa-hand-point-down fa-3x" style="color: whitesmoke;"></i><br><br> -->
-            <a href="https://drive.google.com/file/d/1HoA6sfDwnwTu7eAUJWJdv53LIom2UJZK/view?usp=sharing" target="_blank" style="text-decoration: none;"> 
-                <i class="fas fa-file-alt fa-4x"></i>
-            </a>
         </div>
     </div>   
 
