--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </div>   
 
      <!-- Footer -->
-    <footer class="text-center bg-light">
+    <footer class="text-center">
         <p>Ezequiel Ceballos&copy; 2020 - All rights reserved</p>
     </footer>
 </body>
